Fix vertical alignment of input placeholder

--- a/app/renderer/css/preference.css
+++ b/app/renderer/css/preference.css
@@ -770,3 +770,8 @@ i.open-network-button {
 .tagify__input {
     min-width: 130px !important;
 }
+
+.tagify__input::before {
+    top: 0;
+    bottom: 0;
+}
